examples/errors/parsing/fun_simple-no-arg-sort.cn
fun identity : -> Int [pure] = {
  n -> n
}

main : () [impure] = ()
